# FASTAPI-MONGODB-DOCKER

./: README.md  docker-compose.yml  script.txt
app/: Dockerfile  main.py  pyproject.toml  requeriments.txt
app/server/: app.py  database.py
app/server/models/: student.py
app/server/routes/: student.py
k8s/: mongo.yaml  web.yaml
